--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3004",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "dev": "vite --port 3004",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -25,35 +24,40 @@
     "clsx": "^2.1.1",
     "firebase": "^11.8.1",
     "framer-motion": "^12.4.5",
-    "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
-    "next": "15.1.6",
-    "next-intl": "^3.26.3",
-    "npm": "^11.2.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-barcode": "^1.6.1",
     "react-circular-progressbar": "^2.2.0",
     "react-countup": "^6.5.3",
     "react-data-table-component": "^7.7.0",
     "react-datepicker": "^8.1.0",
-    "react-dom": "^19.0.0",
     "react-flags-select": "^2.4.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.28.0",
     "react-select": "^5.10.0",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "react-i18next": "^15.1.3",
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.4.10"
   }
 }
